--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <title>EMP</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"
+      rel="stylesheet"
+    />
+    <title>HT Store</title>
   </head>
   <body>
     <div id="root"></div>
